--- a/index.html
+++ b/index.html
@@ -90,17 +90,28 @@
       </div>
 
       <div class="grid">
-        <article class="card">
-          <div class="card__body">
-            <p class="mono dim">CASE 01</p>
-            <h3>Analítica aplicada a operaciones</h3>
-            <p class="dim">Indicadores + limpieza + modelo simple + acción operativa. (Añade el repo cuando exista)</p>
-            <div class="card__actions">
-              <a class="btn btn--small btn--ghost" href="#" aria-disabled="true">Repo</a>
-              <a class="btn btn--small btn--ghost" href="#" aria-disabled="true">Demo</a>
-            </div>
-          </div>
-        </article>
+<article class="card">
+  <div class="card__body">
+    <p class="mono dim">CASE 01</p>
+    <h3>Web APP de Autodiagnóstico Energético Interactivo (ISO 50001)</h3>
+    <p class="dim">
+      Web app estática para realizar un autodiagnóstico rápido de eficiencia energética,
+      priorizar oportunidades de mejora y generar una visión inicial alineada con ISO 50001
+      mediante preguntas guiadas y resultados inmediatos.
+    </p>
+
+    <div class="card__actions">
+      <a class="btn btn--small btn--ghost"
+         href="https://github.com/ingjaviergomezm/autodiagnostico-eficiencia-energetica"
+         target="_blank" rel="noopener noreferrer">Repo</a>
+
+      <a class="btn btn--small btn--ghost"
+         href="https://ingjaviergomezm.github.io/autodiagnostico-eficiencia-energetica/"
+         target="_blank" rel="noopener noreferrer">Demo</a>
+    </div>
+  </div>
+</article>
+
 
         <article class="card">
           <div class="card__body">
@@ -201,3 +212,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
