--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
           <div class="card__body">
             <p class="mono dim">CASE 02</p>
             <h3>Dashboard Power BI</h3>
-            <p class="dim">Modelo + visualización + narrativa. Ideal para energía / confiabilidad / desempeño.</p>
+            <p class="dim">Dashboard de Gestión de Mantenimiento bajo ISO 14224 / confiabilidad / desempeño.</p>
             <div class="card__actions">
               <a class="btn btn--small btn--ghost" href="#" aria-disabled="true">Repo</a>
               <a class="btn btn--small btn--ghost" href="#" aria-disabled="true">Reporte</a>
@@ -212,4 +212,5 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
