--- a/index.html
+++ b/index.html
@@ -119,8 +119,7 @@
             <h3>Dashboard Power BI</h3>
             <p class="dim">Dashboard de Gestión de Mantenimiento bajo ISO 14224 / confiabilidad / desempeño.</p>
             <div class="card__actions">
-              <a class="btn btn--small btn--ghost" href="#" aria-disabled="true">Repo</a>
-              <a class="btn btn--small btn--ghost" href="#" aria-disabled="true">Reporte</a>
+              <a class="btn btn--small btn--ghost" href="https://github.com/ingjaviergomezm/dashboard_mantenimiento_y_confiabilidad_iso14224" aria-disabled="true">Repo</a>
             </div>
           </div>
         </article>
@@ -212,5 +211,6 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
