--- a/index.html
+++ b/index.html
@@ -44,7 +44,6 @@
         <div class="cta">
           <a class="btn" href="https://github.com/ingjaviergomezm" target="_blank" rel="noreferrer">GitHub</a>
           <a class="btn btn--ghost" href="#proyectos">Ver proyectos</a>
-          <a class="btn btn--ghost" href="https://www.ingjaviergomezm.com" target="_blank" rel="noreferrer">Sitio</a>
         </div>
 
         <div class="meta">
@@ -75,8 +74,7 @@
 
             <p class="mono dim">CONTACTO</p>
             <p class="mono">
-              <a href="mailto:myazumi62@gmail.com">myazumi62@gmail.com</a><br />
-              <a href="https://www.ingjaviergomezm.com" target="_blank" rel="noreferrer">ingjaviergomezm.com</a>
+              <a href="mailto:ingjaviergomez222@gmail.com">ingjaviergomez222@gmail.com</a><br />
             </p>
           </div>
         </div>
@@ -95,9 +93,9 @@
     <p class="mono dim">CASE 01</p>
     <h3>Web APP de Autodiagnóstico Energético Interactivo (ISO 50001)</h3>
     <p class="dim">
-      Web app estática para realizar un autodiagnóstico rápido de eficiencia energética,
-      priorizar oportunidades de mejora y generar una visión inicial alineada con ISO 50001
-      mediante preguntas guiadas y resultados inmediatos.
+  Web app interactiva que permite a cualquier organización evaluar en minutos su desempeño energético, 
+  descubrir oportunidades de ahorro y visualizar su punto de partida hacia un Sistema de Gestión de la Energía 
+  alineado con ISO 50001.
     </p>
 
     <div class="card__actions">
@@ -211,6 +209,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
