--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
           <div class="card__body">
             <p class="mono dim">CASE 02</p>
             <h3>Dashboard Power BI</h3>
-            <p class="dim">Dashboard de Gestión de Mantenimiento bajo ISO 14224 / confiabilidad / desempeño.</p>
+            <p class="dim">Dashboard de Gestión de Mantenimiento basado en la norma ISO 14224 para centralizar datos de mantenimiento y confiabilidad, monitorear el desempeño de activos y soportar decisiones orientadas a disponibilidad y reducción de costos</p>
             <div class="card__actions">
               <a class="btn btn--small btn--ghost" href="https://github.com/ingjaviergomezm/dashboard_mantenimiento_y_confiabilidad_iso14224" aria-disabled="true">Repo</a>
             </div>
@@ -209,6 +209,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
