--- a/index.html
+++ b/index.html
@@ -195,9 +195,8 @@
       </div>
 
       <div class="contact">
-        <a class="btn" href="mailto:myazumi62@gmail.com">Escríbeme</a>
+        <a class="btn" href="mailto:ingjaviergomez222@gmail.com">Escríbeme</a>
         <a class="btn btn--ghost" href="https://github.com/ingjaviergomezm" target="_blank" rel="noreferrer">GitHub</a>
-        <a class="btn btn--ghost" href="https://www.ingjaviergomezm.com" target="_blank" rel="noreferrer">Sitio</a>
       </div>
     </section>
 
@@ -209,6 +208,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
