Add mobile navigation menu

--- a/index.html
+++ b/index.html
@@ -28,6 +28,16 @@
       <a href="#roadmap">Roadmap</a>
       <a href="#contacto" class="btn btn--ghost">Contacto</a>
     </nav>
+
+    <details class="nav__menu">
+      <summary class="btn btn--ghost nav__toggle">Menú</summary>
+      <div class="nav__panel" role="menu">
+        <a role="menuitem" href="#proyectos">Proyectos</a>
+        <a role="menuitem" href="#stack">Stack</a>
+        <a role="menuitem" href="#roadmap">Roadmap</a>
+        <a role="menuitem" href="#contacto">Contacto</a>
+      </div>
+    </details>
   </header>
 
   <main class="container">
