--- a/index.html
+++ b/index.html
@@ -125,11 +125,10 @@
         <article class="card">
           <div class="card__body">
             <p class="mono dim">CASE 03</p>
-            <h3>Automatización Excel (VBA)</h3>
+            <h3>Automatización Excel/VBA para reporting operativo de programacion de turnos y novedades de nomina a RRHH</h3>
             <p class="dim">Reporting robusto y repetible. Lo “aburrido” bien hecho paga facturas.</p>
             <div class="card__actions">
-              <a class="btn btn--small btn--ghost" href="#" aria-disabled="true">Repo</a>
-              <a class="btn btn--small btn--ghost" href="#" aria-disabled="true">Notas</a>
+              <a class="btn btn--small btn--ghost" href="https://github.com/ingjaviergomezm/Programacion_Calculo_Reporte_Divulgacion_de_Turnos_Automatizado_VBA" aria-disabled="true">Repo</a>
             </div>
           </div>
         </article>
@@ -208,6 +207,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
