--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@
         <article class="card">
           <div class="card__body">
             <p class="mono dim">CASE 03</p>
-            <h3>Automatización Excel/VBA para reporting operativo de programacion de turnos y novedades de nomina a RRHH</h3>
-            <p class="dim">Reporting robusto y repetible. Lo “aburrido” bien hecho paga facturas.</p>
+            <h3>Automatización VBA de reporte de novedades de nomina a RRHH</h3>
+            <p class="dim">Herramienta en Microsoft Excel + VBA para programación mensual de turnos de 12 horas, cálculo automático de recargos de nómina, análisis comparativo por trabajador, generación de reportes ejecutivos en PDF y preparación segura de archivos para distribución.</p>
             <div class="card__actions">
               <a class="btn btn--small btn--ghost" href="https://github.com/ingjaviergomezm/Programacion_Calculo_Reporte_Divulgacion_de_Turnos_Automatizado_VBA" aria-disabled="true">Repo</a>
             </div>
@@ -207,6 +207,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
