--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     <section id="proyectos" class="section">
       <div class="section__head">
         <h2>Proyectos</h2>
-        <p class="dim">3 casos bien contados valen más que 30 repos vacíos.</p>
+        <p class="dim">4 casos bien contados valen más que 30 repos vacíos.</p>
       </div>
 
       <div class="grid">
@@ -132,6 +132,18 @@
             </div>
           </div>
         </article>
+
+        <article class="card">
+          <div class="card__body">
+            <p class="mono dim">CASE 04</p>
+            <h3>Web App — Planificador técnico-financiero de proyectos solares con IA (Colombia)</h3>
+            <p class="dim">Aplicación web para la evaluación técnica, económica y financiera de sistemas fotovoltaicos, incorporando modelos de inteligencia artificial y supuestos normativos del mercado colombiano.</p>
+            <div class="card__actions">
+              <a class="btn btn--small btn--ghost" href="https://github.com/ingjaviergomezm/solar-project-planner" target="_blank" rel="noopener noreferrer">Repo</a>
+              <a class="btn btn--small btn--ghost" href="https://solar-project-planner.vercel.app/" target="_blank" rel="noopener noreferrer">Demo</a>
+            </div>
+          </div>
+        </article>
       </div>
     </section>
 
@@ -165,7 +177,7 @@
           <div class="tl__badge">01</div>
           <div class="tl__content">
             <h3>Portafolio de casos</h3>
-            <p class="dim">3 proyectos end-to-end: problema real → datos → modelo → insight → acción.</p>
+            <p class="dim">4 proyectos end-to-end: problema real → datos → modelo → insight → acción.</p>
           </div>
         </div>
 
