--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <div class="card card--profile">
           <div class="card__top">
             <div class="dot"></div><div class="dot"></div><div class="dot"></div>
-          </div>
+           </div>
           <div class="card__body">
             <p class="mono dim">STATUS</p>
             <p class="mono">ONLINE • BUILDING PORTFOLIO</p>
@@ -82,10 +82,14 @@
     </section>
 
     <section id="proyectos" class="section">
-      <div class="section__head">
-        <h2>Proyectos</h2>
+      <div class="section__head">␍␊
+        <h2>Proyectos</h2>␍␊
+        <p class="dim">3 casos bien contados valen más que 30 repos vacíos.</p>
+      </div>␍␊
+      <div class="section__head">␊
+        <h2>Proyectos</h2>␊
         <p class="dim">4 casos bien contados valen más que 30 repos vacíos.</p>
-      </div>
+      </div>␊
 
       <div class="grid">
 <article class="card">
@@ -122,6 +126,18 @@
           </div>
         </article>
 
+        <article class="card">
+          <div class="card__body">
+            <p class="mono dim">CASE 03</p>
+            <h3>Automatización VBA de reporte de novedades de nomina a RRHH</h3>
+            <p class="dim">Herramienta en Microsoft Excel + VBA para programación mensual de turnos de 12 horas, cálculo automático de recargos de nómina, análisis comparativo por trabajador, generación de reportes ejecutivos en PDF y preparación segura de archivos para distribución.</p>
+            <div class="card__actions">
+              <a class="btn btn--small btn--ghost" href="https://github.com/ingjaviergomezm/Programacion_Calculo_Reporte_Divulgacion_de_Turnos_Automatizado_VBA" aria-disabled="true">Repo</a>
+            </div>
+          </div>
+        </article>
+      </div>
+    </section>
         <article class="card">
           <div class="card__body">
             <p class="mono dim">CASE 03</p>
@@ -173,13 +189,20 @@
       </div>
 
       <div class="timeline">
-        <div class="tl__item">
-          <div class="tl__badge">01</div>
-          <div class="tl__content">
-            <h3>Portafolio de casos</h3>
+        <div class="tl__item">␍␊
+          <div class="tl__badge">01</div>␍␊
+          <div class="tl__content">␍␊
+            <h3>Portafolio de casos</h3>␍␊
+            <p class="dim">3 proyectos end-to-end: problema real → datos → modelo → insight → acción.</p>
+          </div>␍␊
+        </div>␍␊
+        <div class="tl__item">␊
+          <div class="tl__badge">01</div>␊
+          <div class="tl__content">␊
+            <h3>Portafolio de casos</h3>␊
             <p class="dim">4 proyectos end-to-end: problema real → datos → modelo → insight → acción.</p>
-          </div>
-        </div>
+          </div>␊
+        </div>␊
 
         <div class="tl__item">
           <div class="tl__badge">02</div>
@@ -205,20 +228,6 @@
         <p class="dim">Si el problema huele a datos y a operación, me interesa.</p>
       </div>
 
-      <div class="contact">
-        <a class="btn" href="mailto:ingjaviergomez222@gmail.com">Escríbeme</a>
-        <a class="btn btn--ghost" href="https://github.com/ingjaviergomezm" target="_blank" rel="noreferrer">GitHub</a>
-      </div>
-    </section>
-
-    <footer class="footer">
-      <p class="mono dim">© <span id="year"></span> Javier Gómez M • Diseño cyberpunk sobrio • GitHub Pages</p>
-    </footer>
-  </main>
-
-  <script src="script.js"></script>
-</body>
-</html>
 
 
 
