--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="Portafolio de Javier Gómez M — Ingeniería, Analítica de Datos e IA aplicada." />
   <title>Javier Gómez M — Portafolio</title>
+
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;600&family=Space+Grotesk:wght@400;600;700&display=swap" rel="stylesheet">
@@ -31,14 +32,17 @@
   </header>
 
   <main class="container">
+
+    <!-- HERO -->
     <section class="hero">
       <div class="hero__left">
         <p class="kicker">Ingeniería • Datos • IA aplicada</p>
         <h1 class="glitch" data-text="Javier Gómez M">Javier Gómez M</h1>
 
         <p class="subtitle">
-          Ingeniero Industrial enfocado en <strong>confiabilidad</strong>, <strong>eficiencia energética</strong> y
-          <strong>analítica aplicada</strong> en Oil & Gas, energía y renovables.
+          Ingeniero Industrial enfocado en <strong>confiabilidad</strong>,
+          <strong>eficiencia energética</strong> y
+          <strong>analítica aplicada</strong>.
         </p>
 
         <div class="cta">
@@ -49,184 +53,156 @@
         <div class="meta">
           <span class="tag">Colombia</span>
           <span class="tag">Oil & Gas</span>
-          <span class="tag">Energía/Renovables</span>
-        </div>
-      </div>
-
-      <div class="hero__right">
-        <div class="card card--profile">
-          <div class="card__top">
-            <div class="dot"></div><div class="dot"></div><div class="dot"></div>
-           </div>
-          <div class="card__body">
-            <p class="mono dim">STATUS</p>
-            <p class="mono">ONLINE • BUILDING PORTFOLIO</p>
-            <div class="divider"></div>
-
-            <p class="mono dim">FOCO</p>
-            <ul class="list">
-              <li>Analítica para decisiones operativas</li>
-              <li>Eficiencia energética & renovables</li>
-              <li>Automatización (Excel/VBA)</li>
-            </ul>
-
-            <div class="divider"></div>
-
-            <p class="mono dim">CONTACTO</p>
-            <p class="mono">
-              <a href="mailto:ingjaviergomez222@gmail.com">ingjaviergomez222@gmail.com</a><br />
-            </p>
-          </div>
+          <span class="tag">Energía / Renovables</span>
         </div>
       </div>
     </section>
 
+    <!-- PROYECTOS -->
     <section id="proyectos" class="section">
-      <div class="section__head">␍␊
-        <h2>Proyectos</h2>␍␊
-        <p class="dim">3 casos bien contados valen más que 30 repos vacíos.</p>
-      </div>␍␊
-      <div class="section__head">␊
-        <h2>Proyectos</h2>␊
+      <div class="section__head">
+        <h2>Proyectos</h2>
         <p class="dim">4 casos bien contados valen más que 30 repos vacíos.</p>
-      </div>␊
+      </div>
 
       <div class="grid">
-<article class="card">
-  <div class="card__body">
-    <p class="mono dim">CASE 01</p>
-    <h3>Web APP de Autodiagnóstico Energético Interactivo (ISO 50001)</h3>
-    <p class="dim">
-  Web app interactiva que permite a cualquier organización evaluar en minutos su desempeño energético, 
-  descubrir oportunidades de ahorro y visualizar su punto de partida hacia un Sistema de Gestión de la Energía 
-  alineado con ISO 50001.
-    </p>
 
-    <div class="card__actions">
-      <a class="btn btn--small btn--ghost"
-         href="https://github.com/ingjaviergomezm/autodiagnostico-eficiencia-energetica"
-         target="_blank" rel="noopener noreferrer">Repo</a>
+        <!-- CASE 01 -->
+        <article class="card">
+          <div class="card__body">
+            <p class="mono dim">CASE 01</p>
+            <h3>Web App de Autodiagnóstico Energético (ISO 50001)</h3>
+            <p class="dim">
+              Web app interactiva para evaluar desempeño energético,
+              identificar oportunidades de ahorro y preparar la ruta
+              hacia ISO 50001.
+            </p>
+            <div class="card__actions">
+              <a class="btn btn--small btn--ghost"
+                 href="https://github.com/ingjaviergomezm/autodiagnostico-eficiencia-energetica"
+                 target="_blank">Repo</a>
+              <a class="btn btn--small btn--ghost"
+                 href="https://ingjaviergomezm.github.io/autodiagnostico-eficiencia-energetica/"
+                 target="_blank">Demo</a>
+            </div>
+          </div>
+        </article>
 
-      <a class="btn btn--small btn--ghost"
-         href="https://ingjaviergomezm.github.io/autodiagnostico-eficiencia-energetica/"
-         target="_blank" rel="noopener noreferrer">Demo</a>
-    </div>
-  </div>
-</article>
-
-
+        <!-- CASE 02 -->
         <article class="card">
           <div class="card__body">
             <p class="mono dim">CASE 02</p>
-            <h3>Dashboard Power BI</h3>
-            <p class="dim">Dashboard de Gestión de Mantenimiento basado en la norma ISO 14224 para centralizar datos de mantenimiento y confiabilidad, monitorear el desempeño de activos y soportar decisiones orientadas a disponibilidad y reducción de costos</p>
+            <h3>Dashboard Power BI – ISO 14224</h3>
+            <p class="dim">
+              Dashboard de gestión de mantenimiento y confiabilidad
+              orientado a disponibilidad y reducción de costos.
+            </p>
             <div class="card__actions">
-              <a class="btn btn--small btn--ghost" href="https://github.com/ingjaviergomezm/dashboard_mantenimiento_y_confiabilidad_iso14224" aria-disabled="true">Repo</a>
+              <a class="btn btn--small btn--ghost"
+                 href="https://github.com/ingjaviergomezm/dashboard_mantenimiento_y_confiabilidad_iso14224">
+                Repo
+              </a>
             </div>
           </div>
         </article>
 
+        <!-- CASE 03 -->
         <article class="card">
           <div class="card__body">
             <p class="mono dim">CASE 03</p>
-            <h3>Automatización VBA de reporte de novedades de nomina a RRHH</h3>
-            <p class="dim">Herramienta en Microsoft Excel + VBA para programación mensual de turnos de 12 horas, cálculo automático de recargos de nómina, análisis comparativo por trabajador, generación de reportes ejecutivos en PDF y preparación segura de archivos para distribución.</p>
+            <h3>Automatización VBA de nómina y turnos</h3>
+            <p class="dim">
+              Excel + VBA para programación de turnos 12h,
+              cálculo automático de recargos y reportes ejecutivos.
+            </p>
             <div class="card__actions">
-              <a class="btn btn--small btn--ghost" href="https://github.com/ingjaviergomezm/Programacion_Calculo_Reporte_Divulgacion_de_Turnos_Automatizado_VBA" aria-disabled="true">Repo</a>
-            </div>
-          </div>
-        </article>
-      </div>
-    </section>
-        <article class="card">
-          <div class="card__body">
-            <p class="mono dim">CASE 03</p>
-            <h3>Automatización VBA de reporte de novedades de nomina a RRHH</h3>
-            <p class="dim">Herramienta en Microsoft Excel + VBA para programación mensual de turnos de 12 horas, cálculo automático de recargos de nómina, análisis comparativo por trabajador, generación de reportes ejecutivos en PDF y preparación segura de archivos para distribución.</p>
-            <div class="card__actions">
-              <a class="btn btn--small btn--ghost" href="https://github.com/ingjaviergomezm/Programacion_Calculo_Reporte_Divulgacion_de_Turnos_Automatizado_VBA" aria-disabled="true">Repo</a>
+              <a class="btn btn--small btn--ghost"
+                 href="https://github.com/ingjaviergomezm/Programacion_Calculo_Reporte_Divulgacion_de_Turnos_Automatizado_VBA">
+                Repo
+              </a>
             </div>
           </div>
         </article>
 
+        <!-- CASE 04 -->
         <article class="card">
           <div class="card__body">
             <p class="mono dim">CASE 04</p>
-            <h3>Web App — Planificador técnico-financiero de proyectos solares con IA (Colombia)</h3>
-            <p class="dim">Aplicación web para la evaluación técnica, económica y financiera de sistemas fotovoltaicos, incorporando modelos de inteligencia artificial y supuestos normativos del mercado colombiano.</p>
+            <h3>Planificador técnico-financiero solar con IA</h3>
+            <p class="dim">
+              Evaluación técnica y financiera de proyectos FV
+              con supuestos normativos colombianos e IA aplicada.
+            </p>
             <div class="card__actions">
-              <a class="btn btn--small btn--ghost" href="https://github.com/ingjaviergomezm/solar-project-planner" target="_blank" rel="noopener noreferrer">Repo</a>
-              <a class="btn btn--small btn--ghost" href="https://solar-project-planner.vercel.app/" target="_blank" rel="noopener noreferrer">Demo</a>
+              <a class="btn btn--small btn--ghost"
+                 href="https://github.com/ingjaviergomezm/solar-project-planner"
+                 target="_blank">Repo</a>
+              <a class="btn btn--small btn--ghost"
+                 href="https://solar-project-planner.vercel.app/"
+                 target="_blank">Demo</a>
             </div>
           </div>
         </article>
+
       </div>
     </section>
 
+    <!-- STACK -->
     <section id="stack" class="section">
       <div class="section__head">
         <h2>Stack</h2>
-        <p class="dim">Herramientas que uso para producir resultados, no para coleccionar logos.</p>
+        <p class="dim">Herramientas para producir resultados.</p>
       </div>
 
       <div class="pillbox">
         <span class="pill">Python</span>
         <span class="pill">SQL</span>
         <span class="pill">Power BI</span>
-        <span class="pill">Excel avanzado</span>
+        <span class="pill">Excel Avanzado</span>
         <span class="pill">VBA</span>
-        <span class="pill">Visual Basic</span>
-        <span class="pill">Modelado</span>
-        <span class="pill">Eficiencia energética</span>
+        <span class="pill">Eficiencia Energética</span>
         <span class="pill">Renovables</span>
       </div>
     </section>
 
+    <!-- ROADMAP -->
     <section id="roadmap" class="section">
       <div class="section__head">
         <h2>Roadmap</h2>
-        <p class="dim">IA aplicada con mentalidad de ingeniería: medir → validar → decidir.</p>
+        <p class="dim">Medir → validar → decidir.</p>
       </div>
 
       <div class="timeline">
-        <div class="tl__item">␍␊
-          <div class="tl__badge">01</div>␍␊
-          <div class="tl__content">␍␊
-            <h3>Portafolio de casos</h3>␍␊
-            <p class="dim">3 proyectos end-to-end: problema real → datos → modelo → insight → acción.</p>
-          </div>␍␊
-        </div>␍␊
-        <div class="tl__item">␊
-          <div class="tl__badge">01</div>␊
-          <div class="tl__content">␊
-            <h3>Portafolio de casos</h3>␊
-            <p class="dim">4 proyectos end-to-end: problema real → datos → modelo → insight → acción.</p>
-          </div>␊
-        </div>␊
+        <div class="tl__item">
+          <div class="tl__badge">01</div>
+          <div class="tl__content">
+            <h3>Portafolio de casos</h3>
+            <p class="dim">4 proyectos end-to-end.</p>
+          </div>
+        </div>
 
         <div class="tl__item">
           <div class="tl__badge">02</div>
           <div class="tl__content">
-            <h3>Automatización y calidad de datos</h3>
-            <p class="dim">Pipelines simples (pero sólidos) + documentación + trazabilidad.</p>
+            <h3>Automatización</h3>
+            <p class="dim">Pipelines simples y trazables.</p>
           </div>
         </div>
 
         <div class="tl__item">
           <div class="tl__badge">03</div>
           <div class="tl__content">
-            <h3>Entrega y comunicación</h3>
-            <p class="dim">Dashboards + reportes ejecutivos + repos reproducibles.</p>
+            <h3>Entrega</h3>
+            <p class="dim">Dashboards, reportes y repos reproducibles.</p>
           </div>
         </div>
       </div>
     </section>
 
-    <section id="contacto" class="section">
-      <div class="section__head">
-        <h2>Contacto</h2>
-        <p class="dim">Si el problema huele a datos y a operación, me interesa.</p>
-      </div>
+  </main>
+</body>
+</html>
+
 
 
 
