--- a/index.html
+++ b/index.html
@@ -220,16 +220,24 @@
     </section>
 
     <section id="contacto" class="section">
-      <div class="section__head">
-        <h2>Contacto</h2>
-        <p class="dim">Si el problema huele a datos y a operación, me interesa.</p>
-      </div>
-      <!-- Aquí seguiría tu contenido de contacto que no pegaste en el snippet -->
-    </section>
+  <div class="section__head">
+    <h2>Contacto</h2>
+    <p class="dim">Si el problema huele a datos y a operación, me interesa.</p>
+  </div>
 
-  </main>
-</body>
-</html>
+  <div class="card">
+    <div class="card__body">
+      <p class="mono dim">EMAIL</p>
+      <p class="mono">
+        <a href="mailto:ingjaviergomez222@gmail.com">
+          ingjaviergomez222@gmail.com
+        </a>
+      </p>
+    </div>
+  </div>
+</section>
+
+
 
 
 
