🤖 Add Case 05: El Camello — IA Agéntica + stack update

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="es">
+
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -7,7 +8,9 @@
   <title>Javier Gómez M — Portafolio</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;600&family=Space+Grotesk:wght@400;600;700&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;600&family=Space+Grotesk:wght@400;600;700&display=swap"
+    rel="stylesheet">
   <link rel="stylesheet" href="styles.css" />
 </head>
 
@@ -56,7 +59,9 @@
       <div class="hero__right">
         <div class="card card--profile">
           <div class="card__top">
-            <div class="dot"></div><div class="dot"></div><div class="dot"></div>
+            <div class="dot"></div>
+            <div class="dot"></div>
+            <div class="dot"></div>
           </div>
           <div class="card__body">
             <p class="mono dim">STATUS</p>
@@ -85,7 +90,7 @@
       <!-- Se dejó SOLO un encabezado de sección (el que dice 4 casos) -->
       <div class="section__head">
         <h2>Proyectos</h2>
-        <p class="dim">4 casos bien contados valen más que 30 repos vacíos.</p>
+        <p class="dim">5 casos bien contados valen más que 30 repos vacíos.</p>
       </div>
 
       <div class="grid">
@@ -95,18 +100,19 @@
             <h3>Web APP de Autodiagnóstico Energético Interactivo (ISO 50001)</h3>
             <p class="dim">
               Web app interactiva que permite a cualquier organización evaluar en minutos su desempeño energético,
-              descubrir oportunidades de ahorro y visualizar su punto de partida hacia un Sistema de Gestión de la Energía
+              descubrir oportunidades de ahorro y visualizar su punto de partida hacia un Sistema de Gestión de la
+              Energía
               alineado con ISO 50001.
             </p>
 
             <div class="card__actions">
               <a class="btn btn--small btn--ghost"
-                 href="https://github.com/ingjaviergomezm/autodiagnostico-eficiencia-energetica"
-                 target="_blank" rel="noopener noreferrer">Repo</a>
+                href="https://github.com/ingjaviergomezm/autodiagnostico-eficiencia-energetica" target="_blank"
+                rel="noopener noreferrer">Repo</a>
 
               <a class="btn btn--small btn--ghost"
-                 href="https://ingjaviergomezm.github.io/autodiagnostico-eficiencia-energetica/"
-                 target="_blank" rel="noopener noreferrer">Demo</a>
+                href="https://ingjaviergomezm.github.io/autodiagnostico-eficiencia-energetica/" target="_blank"
+                rel="noopener noreferrer">Demo</a>
             </div>
           </div>
         </article>
@@ -116,14 +122,16 @@
             <p class="mono dim">CASE 02</p>
             <h3>Dashboard Power BI</h3>
             <p class="dim">
-              Dashboard de Gestión de Mantenimiento basado en la norma ISO 14224 para centralizar datos de mantenimiento y
-              confiabilidad, monitorear el desempeño de activos y soportar decisiones orientadas a disponibilidad y reducción
+              Dashboard de Gestión de Mantenimiento basado en la norma ISO 14224 para centralizar datos de mantenimiento
+              y
+              confiabilidad, monitorear el desempeño de activos y soportar decisiones orientadas a disponibilidad y
+              reducción
               de costos
             </p>
             <div class="card__actions">
               <a class="btn btn--small btn--ghost"
-                 href="https://github.com/ingjaviergomezm/dashboard_mantenimiento_y_confiabilidad_iso14224"
-                 aria-disabled="true">Repo</a>
+                href="https://github.com/ingjaviergomezm/dashboard_mantenimiento_y_confiabilidad_iso14224"
+                aria-disabled="true">Repo</a>
             </div>
           </div>
         </article>
@@ -133,14 +141,16 @@
             <p class="mono dim">CASE 03</p>
             <h3>Automatización VBA de reporte de novedades de nomina a RRHH</h3>
             <p class="dim">
-              Herramienta en Microsoft Excel + VBA para programación mensual de turnos de 12 horas, cálculo automático de
-              recargos de nómina, análisis comparativo por trabajador, generación de reportes ejecutivos en PDF y preparación
+              Herramienta en Microsoft Excel + VBA para programación mensual de turnos de 12 horas, cálculo automático
+              de
+              recargos de nómina, análisis comparativo por trabajador, generación de reportes ejecutivos en PDF y
+              preparación
               segura de archivos para distribución.
             </p>
             <div class="card__actions">
               <a class="btn btn--small btn--ghost"
-                 href="https://github.com/ingjaviergomezm/Programacion_Calculo_Reporte_Divulgacion_de_Turnos_Automatizado_VBA"
-                 aria-disabled="true">Repo</a>
+                href="https://github.com/ingjaviergomezm/Programacion_Calculo_Reporte_Divulgacion_de_Turnos_Automatizado_VBA"
+                aria-disabled="true">Repo</a>
             </div>
           </div>
         </article>
@@ -154,12 +164,31 @@
               modelos de inteligencia artificial y supuestos normativos del mercado colombiano.
             </p>
             <div class="card__actions">
-              <a class="btn btn--small btn--ghost"
-                 href="https://github.com/ingjaviergomezm/solar-project-planner"
-                 target="_blank" rel="noopener noreferrer">Repo</a>
-              <a class="btn btn--small btn--ghost"
-                 href="https://solar-project-planner.vercel.app/"
-                 target="_blank" rel="noopener noreferrer">Demo</a>
+              <a class="btn btn--small btn--ghost" href="https://github.com/ingjaviergomezm/solar-project-planner"
+                target="_blank" rel="noopener noreferrer">Repo</a>
+              <a class="btn btn--small btn--ghost" href="https://solar-project-planner.vercel.app/" target="_blank"
+                rel="noopener noreferrer">Demo</a>
+            </div>
+          </div>
+        </article>
+
+        <article class="card">
+          <div class="card__body">
+            <p class="mono dim">CASE 05 &mdash; IA AG&Eacute;NTICA</p>
+            <h3>El Camello &mdash; Stack de 16 Agentes de IA Especializados</h3>
+            <p class="dim">
+              Sistema de agentes de IA organizados como una oficina corporativa de 5 pisos, donde cada
+              &ldquo;empleado&rdquo; ejecuta tareas profesionales complejas: generaci&oacute;n de documentos,
+              dashboards, presentaciones, dise&ntilde;o, testing y construcci&oacute;n de MCPs. Orquestados
+              por un agente PM que coordina flujos multi-skill con checkpoints de aprobaci&oacute;n.
+              Demuestra dominio pr&aacute;ctico de IA ag&eacute;ntica, prompting estructurado y
+              arquitecturas de Skills para Antigravity (Google DeepMind).
+            </p>
+            <div class="card__actions">
+              <a class="btn btn--small btn--ghost" href="https://github.com/ingjaviergomezm/el-camello" target="_blank"
+                rel="noopener noreferrer">Repo</a>
+              <a class="btn btn--small btn--ghost" href="https://ingjaviergomezm.github.io/el-camello/" target="_blank"
+                rel="noopener noreferrer">Demo interactiva</a>
             </div>
           </div>
         </article>
@@ -180,8 +209,11 @@
         <span class="pill">VBA</span>
         <span class="pill">Visual Basic</span>
         <span class="pill">Modelado</span>
-        <span class="pill">Eficiencia energética</span>
+        <span class="pill">Eficiencia energ&eacute;tica</span>
         <span class="pill">Renovables</span>
+        <span class="pill">IA Ag&eacute;ntica</span>
+        <span class="pill">Antigravity</span>
+        <span class="pill">Gemini API</span>
       </div>
     </section>
 
@@ -220,31 +252,19 @@
     </section>
 
     <section id="contacto" class="section">
-  <div class="section__head">
-    <h2>Contacto</h2>
-    <p class="dim">Si el problema huele a datos y a operación, me interesa.</p>
-  </div>
+      <div class="section__head">
+        <h2>Contacto</h2>
+        <p class="dim">Si el problema huele a datos y a operación, me interesa.</p>
+      </div>
 
-  <div class="card">
-    <div class="card__body">
-      <p class="mono dim">EMAIL</p>
-      <p class="mono">
-        <a href="mailto:ingjaviergomez222@gmail.com">
-          ingjaviergomez222@gmail.com
-        </a>
-      </p>
-    </div>
-  </div>
-</section>
-
-
-
-
-
-
-
-
-
-
-
-
+      <div class="card">
+        <div class="card__body">
+          <p class="mono dim">EMAIL</p>
+          <p class="mono">
+            <a href="mailto:ingjaviergomez222@gmail.com">
+              ingjaviergomez222@gmail.com
+            </a>
+          </p>
+        </div>
+      </div>
+    </section>
